--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -2,18 +2,20 @@
 
 命令|节点
 ----|----
-hadoop-daemon.sh start journalnode | hadoop1、hadoop2、hadoop3
-hadoop-daemon.sh start namenode    | hadoop1、hadoop2
-hadoop-daemons.sh start datanode   | hadoop1
-start-yarn.sh                      | hadoop1、hadoop2
-hadoop-daemon.sh start zkfc        | hadoop1、hadoop2
+hadoop-daemon.sh start journalnode            | hadoop1、hadoop2、hadoop3
+hadoop-daemon.sh start namenode               | hadoop1、hadoop2
+hadoop-daemons.sh start datanode              | hadoop1
+start-yarn.sh                                 | hadoop1、hadoop2
+hadoop-daemon.sh start zkfc                   | hadoop1、hadoop2
+mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
 
 # hadoop集群停止
 
 命令|节点
 ----|----
-hadoop-daemon.sh stop zkfc        | hadoop1、hadoop2
-stop-yarn.sh                      | hadoop1、hadoop2
-hadoop-daemons.sh stop datanode   | hadoop1
-hadoop-daemon.sh stop namenode    | hadoop1、hadoop2
-hadoop-daemon.sh stop journalnode | hadoop1、hadoop2、hadoop3
+mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
+hadoop-daemon.sh stop zkfc                    | hadoop1、hadoop2
+stop-yarn.sh                                  | hadoop1、hadoop2
+hadoop-daemons.sh stop datanode               | hadoop1
+hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
+hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
