--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -1,5 +1,13 @@
 # hadoop集群启动
 
+## 1.启动zookeeper
+
+命令|节点
+----|----
+/home/bin/zk.sh start                         | hadoop1
+
+## 2. 启动hadoop
+
 命令|节点
 ----|----
 hadoop-daemon.sh start journalnode            | hadoop1、hadoop2、hadoop3
@@ -11,6 +19,8 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 # hadoop集群停止
 
+## 1.停止hadoop
+
 命令|节点
 ----|----
 mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
@@ -19,3 +29,9 @@ stop-yarn.sh                                  | hadoop1、hadoop2
 hadoop-daemons.sh stop datanode               | hadoop1
 hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
 hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
+
+## 2.停止zookeeper
+
+命令|节点
+----|----
+/home/bin/zk.sh stop                         | hadoop1
