--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -23,7 +23,7 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 命令|节点
 ----|----
-mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
+mr-jobhistory-daemon.sh stop historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
 hadoop-daemon.sh stop zkfc                    | hadoop1、hadoop2
 stop-yarn.sh                                  | hadoop1、hadoop2
 hadoop-daemons.sh stop datanode               | hadoop1
