--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -17,21 +17,33 @@ start-yarn.sh                                 | hadoop1、hadoop2
 hadoop-daemon.sh start zkfc                   | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
 
-# hadoop集群停止
-
-## 1.停止hadoop
+## 3. 启动hive
 
 命令|节点
 ----|----
-mr-jobhistory-daemon.sh stop historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
+/usr/local/hive/bin/start.sh                  | hadoop1、hadoop2、hadoop3
+
+# hadoop集群停止
+
+## 1.停止hive
+
+命令|节点
+----|----
+/usr/local/hive/bin/stop.sh                   | hadoop1
+
+## 2.停止hadoop
+
+命令|节点
+----|----
+mr-jobhistory-daemon.sh stop historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 hadoop-daemon.sh stop zkfc                    | hadoop1、hadoop2
 stop-yarn.sh                                  | hadoop1、hadoop2
 hadoop-daemons.sh stop datanode               | hadoop1
 hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
 hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 
-## 2.停止zookeeper
+## 3.停止zookeeper
 
 命令|节点
 ----|----
-/home/bin/zk.sh stop                         | hadoop1
+/home/bin/zk.sh stop                          | hadoop1
