--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -23,18 +23,29 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 ----|----
 /usr/local/hive/bin/start.sh                  | hadoop1、hadoop2、hadoop3
 
+## 4. 启动hbase
+
+命令|节点
+----|----
+/usr/local/hbase/bin/start-hbase.sh           | hadoop1、hadoop2
 
 
 
 # hadoop集群停止
 
-## 1.停止hive
+## 1.停止hbase
+
+命令|节点
+----|----
+/usr/local/hbase/bin/stop-hbase.sh            | hadoop1、hadoop2
+
+## 2.停止hive
 
 命令|节点
 ----|----
 /usr/local/hive/bin/stop.sh                   | hadoop1
 
-## 2.停止hadoop
+## 3.停止hadoop
 
 命令|节点
 ----|----
@@ -45,7 +56,7 @@ hadoop-daemons.sh stop datanode               | hadoop1
 hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
 hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 
-## 3.停止zookeeper
+## 4.停止zookeeper
 
 命令|节点
 ----|----
