--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -1,4 +1,4 @@
-# hadoop集群启动
+# <font color=red>hadoop集群启动</font>
 
 ## 1.启动zookeeper
 
@@ -29,9 +29,7 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 ----|----
 /usr/local/hbase/bin/start-hbase.sh           | hadoop1、hadoop2
 
-
-
-# hadoop集群停止
+# <font color=red>hadoop集群停止</font>
 
 ## 1.停止hbase
 
