--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -1,6 +1,6 @@
-# <font color=#FF00FF>hadoop集群启动</font>
+# hadoop集群启动
 
-## 1.启动zookeeper
+### 1.启动zookeeper
 
 命令|节点
 ----|----
@@ -29,7 +29,7 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 ----|----
 /usr/local/hbase/bin/start-hbase.sh           | hadoop1、hadoop2
 
-# <font color=red>hadoop集群停止</font>
+# hadoop集群停止
 
 ## 1.停止hbase
 
