--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -1,12 +1,12 @@
 # hadoop集群启动
 
-#### 1.启动zookeeper
+### 1.启动zookeeper
 
 命令|节点
 ----|----
 /home/bin/zk.sh start                         | hadoop1
 
-## 2. 启动hadoop
+### 2. 启动hadoop
 
 命令|节点
 ----|----
@@ -17,13 +17,13 @@ start-yarn.sh                                 | hadoop1、hadoop2
 hadoop-daemon.sh start zkfc                   | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
 
-## 3. 启动hive
+### 3. 启动hive
 
 命令|节点
 ----|----
 /usr/local/hive/bin/start.sh                  | hadoop1、hadoop2、hadoop3
 
-## 4. 启动hbase
+### 4. 启动hbase
 
 命令|节点
 ----|----
@@ -31,19 +31,19 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 # hadoop集群停止
 
-## 1.停止hbase
+### 1.停止hbase
 
 命令|节点
 ----|----
 /usr/local/hbase/bin/stop-hbase.sh            | hadoop1、hadoop2
 
-## 2.停止hive
+### 2.停止hive
 
 命令|节点
 ----|----
 /usr/local/hive/bin/stop.sh                   | hadoop1
 
-## 3.停止hadoop
+### 3.停止hadoop
 
 命令|节点
 ----|----
@@ -54,7 +54,7 @@ hadoop-daemons.sh stop datanode               | hadoop1
 hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
 hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 
-## 4.停止zookeeper
+### 4.停止zookeeper
 
 命令|节点
 ----|----
