--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -35,7 +35,7 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 命令|节点
 ----|----
-/usr/local/hive/bin/stop.sh                   | hadoop1
+/usr/local/hive/bin/stop.sh                   | hadoop1、hadoop2、hadoop3
 
 ### 2.停止hbase
 
