--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -21,7 +21,8 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 命令|节点
 ----|----
-/usr/local/hbase/bin/start-hbase.sh           | hadoop1、hadoop2
+/usr/local/hbase/bin/start-hbase.sh                  | hadoop1、hadoop2
+/usr/local/hbase/bin/hbase-daemon.sh start thrift    | hadoop1、(hadoop2)
 
 ### 4. 启动hive
 
@@ -41,7 +42,8 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 命令|节点
 ----|----
-/usr/local/hbase/bin/stop-hbase.sh            | hadoop1、hadoop2
+/usr/local/hbase/bin/hbase-daemon.sh stop thrift     | hadoop1、(hadoop2)
+/usr/local/hbase/bin/stop-hbase.sh                   | hadoop1、hadoop2
 
 ### 3.停止hadoop
 
