--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -30,6 +30,12 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 ----|----
 /usr/local/hive/bin/start.sh                  | hadoop1、hadoop2、hadoop3
 
+### 5. 启动hue
+
+命令|节点
+----|----
+/usr/local/hue/build/env/bin/hue runserver    | hadoop4
+
 # hadoop集群停止
 
 ### 1.停止hive
