--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -34,7 +34,7 @@ mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、ha
 
 命令|节点
 ----|----
-su - hue "/usr/local/hue/build/env/bin/hue runserver"    | hadoop4
+su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
 
 # hadoop集群停止
 
