--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -4,33 +4,39 @@
 
 命令|节点
 ----|----
-/home/bin/zk.sh start                         | hadoop1
+/home/bin/zk.sh start                          | hadoop1
 
 ### 2. 启动hadoop
 
 命令|节点
 ----|----
-hadoop-daemon.sh start journalnode            | hadoop1、hadoop2、hadoop3
-hadoop-daemon.sh start namenode               | hadoop1、hadoop2
-hadoop-daemons.sh start datanode              | hadoop1
-start-yarn.sh                                 | hadoop1、hadoop2
-hadoop-daemon.sh start zkfc                   | hadoop1、hadoop2
-mr-jobhistory-daemon.sh start historyserver   | hadoop1、hadoop2、hadoop3、hadoop4
+hadoop-daemon.sh start journalnode             | hadoop1、hadoop2、hadoop3
+hadoop-daemon.sh start namenode                | hadoop1(主)、hadoop2(备)
+hadoop-daemons.sh start datanode               | hadoop1
+start-yarn.sh                                  | hadoop1(主)、hadoop2(备)
+hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
+mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 
 ### 3. 启动hbase
 
 命令|节点
 ----|----
-/usr/local/hbase/bin/start-hbase.sh                  | hadoop1、hadoop2
-/usr/local/hbase/bin/hbase-daemon.sh start thrift    | hadoop1、(hadoop2)
+/usr/local/hbase/bin/start-hbase.sh                  | hadoop1(主)、hadoop2(备)
+/usr/local/hbase/bin/hbase-daemon.sh start thrift    | hadoop1(主)、hadoop2(备)
 
 ### 4. 启动hive
 
 命令|节点
 ----|----
-/usr/local/hive/bin/start.sh                  | hadoop1、hadoop2、hadoop3
+/usr/local/hive/bin/start.sh                   | hadoop1、hadoop2、hadoop3
 
-### 5. 启动hue
+### 5. 启动spark
+
+命令|节点
+----|----
+/usr/local/spark/sbin/start-all.sh             | hadoop1(master;hadoop2(slave)、hadoop3(slave))
+
+### 6. 启动hue
 
 命令|节点
 ----|----
@@ -38,20 +44,26 @@ su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
 
 # hadoop集群停止
 
-### 1.停止hive
+### 1. 停止spark
+
+命令|节点
+----|----
+/usr/local/spark/sbin/stop-all.sh             | hadoop1(master;hadoop2(slave)、hadoop3(slave))
+
+### 2.停止hive
 
 命令|节点
 ----|----
 /usr/local/hive/bin/stop.sh                   | hadoop1、hadoop2、hadoop3
 
-### 2.停止hbase
+### 3.停止hbase
 
 命令|节点
 ----|----
 /usr/local/hbase/bin/hbase-daemon.sh stop thrift     | hadoop1、(hadoop2)
 /usr/local/hbase/bin/stop-hbase.sh                   | hadoop1、hadoop2
 
-### 3.停止hadoop
+### 4.停止hadoop
 
 命令|节点
 ----|----
@@ -62,7 +74,7 @@ hadoop-daemons.sh stop datanode               | hadoop1
 hadoop-daemon.sh stop namenode                | hadoop1、hadoop2
 hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 
-### 4.停止zookeeper
+### 5.停止zookeeper
 
 命令|节点
 ----|----
