--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -30,7 +30,7 @@ mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、h
 ----|----
 /usr/local/hive/bin/start.sh                   | hadoop1、hadoop2、hadoop3
 
-### 5. 启动spark
+### 5. 启动spark(on yarn模式不用启动spark集群)
 
 命令|节点
 ----|----
@@ -44,7 +44,7 @@ su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
 
 # hadoop集群停止
 
-### 1. 停止spark
+### 1. 停止spark(on yarn模式不用启动spark集群)
 
 命令|节点
 ----|----
