--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -36,7 +36,13 @@ mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、h
 ----|----
 /usr/local/spark/sbin/start-all.sh             | hadoop1(master;hadoop2(slave)、hadoop3(slave))
 
-### 6. 启动hue
+### 6. 启动kafka
+
+命令|节点
+----|----
+/usr/local/kafka/bin/kafka-server-start.sh -daemon /usr/local/kafka/config/server.properties | hadoop2、hadoop3、hadoop4
+
+### 7. 启动hue
 
 命令|节点
 ----|----
@@ -79,3 +85,9 @@ hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 命令|节点
 ----|----
 /home/bin/zk.sh stop                          | hadoop1
+
+### 6. 停止kafka
+
+命令|节点
+----|----
+/usr/local/kafka/bin/kafka-server-stop.sh -daemon /usr/local/kafka/config/server.properties  | hadoop2、hadoop3、hadoop4
