--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -42,7 +42,13 @@ mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、h
 ----|----
 /usr/local/kafka/bin/kafka-server-start.sh -daemon /usr/local/kafka/config/server.properties | hadoop2、hadoop3、hadoop4
 
-### 7. 启动hue
+### 7. 启动kafka-manager
+
+命令|节点
+----|----
+/usr/local/kafka-manager/bin/start.sh                    | hadoop3
+
+### 8. 启动hue
 
 命令|节点
 ----|----
@@ -86,8 +92,14 @@ hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 ----|----
 /home/bin/zk.sh stop                          | hadoop1
 
-### 6. 停止kafka
+### 6. 停止kafka-manager
 
 命令|节点
 ----|----
-/usr/local/kafka/bin/kafka-server-stop.sh -daemon /usr/local/kafka/config/server.properties  | hadoop2、hadoop3、hadoop4
+/usr/local/kafka-manager/bin/stop.sh          | hadoop3
+
+### 7. 停止kafka
+
+命令|节点
+----|----
+/usr/local/kafka/bin/kafka-server-stop.sh     | hadoop2、hadoop3、hadoop4
