--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -103,3 +103,9 @@ hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 命令|节点
 ----|----
 /usr/local/kafka/bin/kafka-server-stop.sh     | hadoop2、hadoop3、hadoop4
+
+### 8. 停止hue
+
+命令|节点
+----|----
+/usr/local/hue/stop.sh                        | hadoop4
