--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -10,6 +10,14 @@
 
 命令|节点
 ----|----
+start-all.sh                                   | hadoop1
+hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
+mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
+
+`或者`
+
+命令|节点
+----|----
 hadoop-daemon.sh start journalnode             | hadoop1、hadoop2、hadoop3
 hadoop-daemon.sh start namenode                | hadoop1(主)、hadoop2(备)
 hadoop-daemons.sh start datanode               | hadoop1
@@ -76,6 +84,14 @@ su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
 /usr/local/hbase/bin/stop-hbase.sh                   | hadoop1、hadoop2
 
 ### 4.停止hadoop
+
+命令|节点
+----|----
+mr-jobhistory-daemon.sh stop historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
+hadoop-daemon.sh stop zkfc                    | hadoop1、hadoop2
+stop-all.sh                                   | hadoop1
+
+`或者`
 
 命令|节点
 ----|----
