--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -11,6 +11,7 @@
 命令|节点
 ----|----
 start-all.sh                                   | hadoop1
+start-yarn.sh                                  | hadoop2(备)
 hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 
@@ -90,6 +91,7 @@ su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
 mr-jobhistory-daemon.sh stop historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 hadoop-daemon.sh stop zkfc                    | hadoop1、hadoop2
 stop-all.sh                                   | hadoop1
+stop-yarn.sh                                  | hadoop2
 
 `或者`
 
