--- a/集群启动停止命令.md
+++ b/集群启动停止命令.md
@@ -61,7 +61,7 @@ mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、h
 
 命令|节点
 ----|----
-su - hue -c "/usr/local/hue/build/env/bin/supervisor"    | hadoop4
+/usr/local/hue/start.sh                                  | hadoop4
 
 # hadoop集群停止
 
