--- a/hadoop集群安装/集群启动停止命令.md
+++ b/hadoop集群安装/集群启动停止命令.md
@@ -127,3 +127,57 @@ hadoop-daemon.sh stop journalnode             | hadoop1、hadoop2、hadoop3
 命令|节点
 ----|----
 /usr/local/hue/stop.sh                        | hadoop4
+
+[root@hadoop1 config]# jps
+3619 ThriftServer
+5156 ResourceManager
+1670 Jps
+3207 HMaster
+3785 RunJar
+5353 JobHistoryServer
+3786 RunJar
+4975 DFSZKFailoverController
+2581 NodeManager
+2134 DataNode
+2327 JournalNode
+3353 HRegionServer
+4863 NameNode
+
+[root@hadoop2 kafka]# jps
+2340 ResourceManager
+9254 Kafka
+2599 JobHistoryServer
+9897 Jps
+5066 NameNode
+2896 HMaster
+1905 DataNode
+3286 ThriftServer
+8216 QuorumPeerMain
+2073 NodeManager
+2490 DFSZKFailoverController
+3451 RunJar
+2716 HRegionServer
+3452 RunJar
+1983 JournalNode
+
+[root@hadoop3 kafka]# jps
+1841 DataNode
+7763 Kafka
+2563 RunJar
+2564 RunJar
+2246 JobHistoryServer
+7847 ProdServerStart
+1911 JournalNode
+8155 Jps
+6699 QuorumPeerMain
+2363 HRegionServer
+2013 NodeManager
+
+[root@hadoop4 kafka]# jps
+1940 NodeManager
+18564 QuorumPeerMain
+19413 Jps
+19225 Kafka
+2154 JobHistoryServer
+1835 DataNode
+2270 HRegionServer
