--- a/hadoop集群安装/集群启动停止命令.md
+++ b/hadoop集群安装/集群启动停止命令.md
@@ -15,15 +15,16 @@ start-yarn.sh                                  | hadoop2(备)
 hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 
-`或者`
+`以上启动没法保证hadoop1为namenode的active，下面启动顺序将保证hadoop1为active`
 
 命令|节点
 ----|----
 hadoop-daemon.sh start journalnode             | hadoop1、hadoop2、hadoop3
-hadoop-daemon.sh start namenode                | hadoop1(主)、hadoop2(备)
+hadoop-daemon.sh start namenode                | hadoop1(主)
+hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
+hadoop-daemon.sh start namenode                | hadoop2(备)
 hadoop-daemons.sh start datanode               | hadoop1
 start-yarn.sh                                  | hadoop1(主)、hadoop2(备)
-hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 
 ### 3. 启动hbase
