--- a/hadoop集群安装/集群启动停止命令.md
+++ b/hadoop集群安装/集群启动停止命令.md
@@ -15,8 +15,8 @@ start-yarn.sh                                  | hadoop2(备)
 hadoop-daemon.sh start zkfc                    | hadoop1、hadoop2
 mr-jobhistory-daemon.sh start historyserver    | hadoop1、hadoop2、hadoop3、hadoop4
 
-`以上启动顺序没法保证hadoop1为namenode的active`
-```下面启动顺序将保证hadoop1为active```
+`以上启动顺序没法保证hadoop1为namenode的active`  
+`下面启动顺序将保证hadoop1为active`
 
 命令|节点
 ----|----
